<resources>
    <string name="app_name">Be Ur Own Trainer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="pp_btn_comenzar">Comenzar</string>
    <string name="pp_btn_editar_rutina">Editar Rutina</string>
    <string name="pp_btn_progreso">Progreso</string>
    <string name="pp_btn_avances">Avances</string>
    <string name="accesorios">Accesorios</string>


    <string name="btn_show_rutine">Ver Rutina</string>
    <string name="btn_data">Ver Medidas</string>
    <string name="btn_camera">Ver Avances</string>
    <string name="start">Comenzar</string>
    <string name="pause">Pausa</string>
    <string name="continuar">Continuar</string>
    <string name="next">Siguiente ejercicio</string>
    <string name="end">Finalizar</string>
    <string name="regresar">Regresar</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="mensaje_pp">¡El día de hoy no hay ejercicios registrados! \n\nPulsa en \"Ver Rutina\" y selecciona el día de hoy para agregar algunos.</string>
    <string name="title_activity_ver_avances">VerAvancesActivity</string>

    <string name="ver_avances_activity_tomarfoto">Tomar Foto</string>
    <string name="ver_avances_activity_elegirfoto">Elegir Foto</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_editar_rutina">EditarRutina</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="dia_1">L</string>
    <string name="dia_2">M</string>
    <string name="dia_3">M</string>
    <string name="dia_4">J</string>
    <string name="dia_5">V</string>
    <string name="dia_6">S</string>
    <string name="dia_7">D</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="utilidad_basico">Basic</string>
    <string name="utilidad_auxiliar">Auxiliary</string>

    <string name="mecanismo_isolated">Isolated</string>
    <string name="mecanismo_compound">Compound</string>

    <string name="push">Push</string>
    <string name="pull">Pull</string>

    <string name="preparacion">Preparación...</string>
    <string name="ejecucion">Ejecución...</string>
    <string name="comentarios">Comentarios y Tips...</string>


    <string name="musculo_pierna">Pierna y Gluteo</string>
    <string name="btn_editar_rutina_biserie">Agregar Bi-Serie</string>
    <string name="btn_editar_rutina_serie">Agregar Ejercicio</string>
    <string name="title_activity_editar_rutina_agregar_ejercicio">EditarRutinaAgregarEjercicio
    </string>
    <string name="utilidad_texto">Utilidad:</string>
    <string name="mecanismo_texto">Mecanismo:</string>
    <string name="fuerza_texto">Tipo de fuerza:</string>


    <string name="pierna_smith_kneeling_rear_kick_nombre">Smith machine kneeling rear kick</string>
    <string name="pierna_cable_abduction_nombre">Abducción de pierna (cable)</string>

    <!-- Pantorrilla -->
    <string name="pierna_dumbbell_pantorrilla_levantamiento_de_un_pie">Standing dumbbell one-leg calf raise</string>
    <string name="pierna_pantorrilla_machine_seated_one_leg_calf_raise">Machine seated one-leg calf raise</string>
    <string name="dialogo_agregar_ejercicio_num_series">Número de series</string>
    <string name="dialogo_agregar_ejercicio_num_repeticiones">Número de repeticiones</string>
    <string name="dialogo_agregar_ejercicio_peso">Peso (Kg)</string>
    <string name="dialogo_agregar_ejercicio_descanso_serie">Descanso al finalizar ejercicio (Seg)</string>
    <string name="dialogo_agregar_ejercicio_descanso_bi_serie">Descanso al finalizar Bi-Serie (Seg)</string>
    <string name="dialogo_agregar_ejercicio_descanso_final">Descanso al finalizar (Seg)</string>
    <string name="dialogo_agregar_ejercicio_descanso_biserie">Descanso entre ejercicios (Seg)</string>

    <string name="preparacion_texto">Preparación:</string>
    <string name="ejecucion_texto">Ejecución:</string>
    <string name="comentarios_texto">Comentarios y Consejos:</string>
    <string name="nota_video"> Ver un vídeo :)</string>
    <string name="espalda_dumbbell_bent_over_two_arm">Bent over two arm dumbbell row</string>
    <string name="preparacion_espalda_dumbbell_bent_over_two_arm">Kneel over side of bench by placing knee and hand of supporting arm on bench. Position foot of opposite leg slightly back to side. Grasp dumbbell from floor.</string>
    <string name="ejecucion_espalda_dumbbell_bent_over_two_arm">Pull dumbbell to up to side until it makes contact with ribs or until upper arm is just beyond horizontal. Return until arm is extended and shoulder is stretched downward. Repeat and continue with opposite arm.</string>
    <string name="comentarios_espalda_dumbbell_bent_over_two_arm">Allow scapula to articulate but do not rotate torso in effort to throw weight up. Torso should be close to horizontal. Positioning supporting knee and/or arm slightly forward or back will allow for proper levelling of torso. Torso may be positioned lower to allow for heavier dumbbell to make contact with floor, if desired.</string>
    <string name="musculo_espalda">Espalda</string>
    <string name="actualizar">Actualizar</string>
    <string name="title_activity_editar_rutina_agregar_bi_serie">EditarRutinaAgregarBiSerie</string>


</resources>
