<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jorgeipn7.com.beurowntrainer.activities.MainActivity"
    tools:showIn="@layout/app_bar_main">

    

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline1"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"
        tools:layout_editor_absoluteY="154dp"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/iv_main_estados"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/main_img_background"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


    <Button
        android:id="@+id/btn_comenzar"
        style="@style/ButtonPP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_play_color"
        android:text="@string/pp_btn_comenzar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_main_estados"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/btn_editar_rutina"
        android:text="@string/pp_btn_editar_rutina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/ButtonPP"
        android:drawableLeft="@drawable/ic_calendar_color"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_comenzar"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/btn_progreso"
        android:text="@string/pp_btn_progreso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_medidas_color"
        style="@style/ButtonPP"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_editar_rutina"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/btn_avances"
        android:text="@string/pp_btn_avances"
        android:layout_width="0dp"
        android:drawableLeft="@drawable/ic_cam_color"
        android:layout_height="wrap_content"
        style="@style/ButtonPP"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_progreso"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/btn_accesorios"
        android:text="@string/accesorios"
        android:layout_width="0dp"

        android:drawableLeft="@drawable/ic_accesorios"
        android:layout_height="wrap_content"
        style="@style/ButtonPP"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_avances"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />
    

    <TextView
        android:background="@color/amarillo_alpha"
        android:id="@+id/tv_mensaje_pp"
        android:text="@string/mensaje_pp"
        android:visibility="visible"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/blanco"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_accesorios"
        app:layout_constraintHorizontal_bias="0.0" />






</android.support.constraint.ConstraintLayout>
